@@ -1,6 +1,7 @@
 2017-08-05
-    * server.time.c: Make firewalls choose their direction to cast based on direction,
+    * server/time.c: Make firewalls choose their direction to cast based on direction,
       not sp. Fixes bug #834.
+    * common/button.c: Fix rotation of firewalls to also use direction.
 
 2017-07-29	Rick Tanner
 	* lib/help/statistics.en: Update statistics help file with information on
